--- a/server/static/html/maps-form.html
+++ b/server/static/html/maps-form.html
@@ -75,6 +75,39 @@ window.onload = (function(){
         </table>
     </div>
 
+    {% if gid %}
+
+{{ forms.nodes.non_form_errors.as_ul }}
+<table id="formset" class="form">
+{% for form in forms.nodes %}
+  {% if forloop.first %}
+  <thead><tr>
+    {% for field in form.visible_fields %}
+    <th>
+        {{ field.label|capfirst }}<br />
+        <span class="helptext">{{ field.help_text }}</span>
+    </th>
+    {% endfor %}
+  </tr></thead>
+  {% endif %}
+  <tr class="{% cycle row1,row2 %}">
+  {% for field in form.visible_fields %}
+    <td>
+    {# Include the hidden fields in the form #}
+    {% if forloop.first %}
+      {% for hidden in form.hidden_fields %}
+      {{ hidden }}
+      {% endfor %}
+    {% endif %}
+      {{ field.errors.as_ul }}
+      {{ field }}
+    </td>
+  {% endfor %}
+  </tr>
+{% endfor %}
+</table>
+
+    {% endif %}
     {% if not gid %}
     <p class="secret">Please remember the following secret,
     it will allow you to edit your map in the future:
