show graph validation errors on graph editor

--- a/server/static/html/maps-form.html
+++ b/server/static/html/maps-form.html
@@ -111,6 +111,9 @@ function pageUtils() {
         <strong>Delete</strong> concepts or links by clicking on the concept or link
         and then press delete or backspace.<br />
         <strong>OPTIMIZE</strong> the placement of the concepts and links with the Z key.</p>
+        {% if forms.error %}
+            <p class="error" style="padding:0;margin:0;">{{ forms.error.as_text }}</p>
+        {% endif %}
         <div id="edit-view-wrapper"></div>
     </div>
 
