change graph edit delete key to x to prevent accidental reversion through history

--- a/server/static/html/maps-form.html
+++ b/server/static/html/maps-form.html
@@ -109,7 +109,7 @@ function pageUtils() {
         and drag from the prerequisite to the postrequisite.
         A prerequisite should point to a postrequisite.<br />
         <strong>Delete</strong> concepts or links by clicking on the concept or link
-        and then press delete or backspace.<br />
+        and then press the X key.<br />
         <strong>OPTIMIZE</strong> the placement of the concepts and links with the Z key.</p>
         {% if forms.error %}
             <p class="error" style="padding:0;margin:0;">{{ forms.error.as_text }}</p>
