add graph name to quiz views

--- a/server/static/html/underscore-templates/quiz-error-view.html
+++ b/server/static/html/underscore-templates/quiz-error-view.html
@@ -12,11 +12,22 @@
     </div>
     <br />
     <div>
-        <p>Welcome to <strong>OCTAL</strong>, the Online Course Tool for Adaptive Learning.</p>
-        <p>You will see a number of concepts and you can click on one to see an exercise associated with that concept.
-            As you answer problems, this tool will try to predict your learning and it will highlight concepts with a
-            <strong>green color</strong> that it estimates you understand well. This estimation of your understanding
-            is a new feature so you should continue answering problems in any concept, green or not, if you like.</p>
+        <h1>OCTAL</h1>
+        <p>Welcome to <%= graphName %>.</p>
+        <p>
+            Click on any of the concepts to see exercises associated with it.
+            As you respond to them, the tool will try to predict your level of
+            mastery of that concept, highlighting those it predicts that you
+            understand with a <strong>green color</strong> and <strong>thick
+            border</strong>.
+        </p>
+        <p>
+            Since this prediction is purely for your benefit, it is fine to
+            get exercises wrong when you are not sure about the answer!
+            Also, feel free to continue attempting exercises in any concept,
+            highlighted or not, based on your own level of comfort with
+            the topic.
+        </p>
         <p>Enjoy the tool, we hope you find it useful.</p>
     </div>
 </script>
