--- a/server/static/html/map.html
+++ b/server/static/html/map.html
@@ -31,6 +31,7 @@
       oGlobals.auxData = {{ full_graph_skeleton|safe }};
       oGlobals.auxModel = null; // init in main js app
       oGlobals.linear = {{ linear }};
+      oGlobals.graphName = "{{ graph_name }}";
       oGlobals.participant = {{ participant }};
       oGlobals.studyActive = {{ study_active }};
       oGlobals.csrftoken = '{{ csrf_token }}';
