--- a/server/static/html/maps-all.html
+++ b/server/static/html/maps-all.html
@@ -1,7 +1,7 @@
 {% extends "octal.html" %}
 {% load staticfiles %}
 
-{% block title %}: all maps{% endblock %}
+{% block title %}: all Units{% endblock %}
 
 {% block main %}
 
@@ -13,9 +13,9 @@
 
 <h1>OCTAL</h1>
 
-<h2>All Maps</h2>
+<h2>All Units</h2>
 
-<p>The following is a list of all maps currently in the OCTAL system.
+<p>The following is a list of all publicly listed OCTAL Units.
 Please contribute by <a href="{% url 'maps:new' %}">adding 
 more</a>!</p>
 
