fix exercise edit required fields and distractor hiding

--- a/server/static/html/exercises-form.html
+++ b/server/static/html/exercises-form.html
@@ -50,10 +50,11 @@ function pageUtils() {
   // dynamically hide distractor fields
   var total_ex = $('#id_{{ forms.prefix }}-TOTAL_FORMS').val();
   for (var i=0; i < total_ex; i++) {
-    group = i;
-    $("#id_problems_set-"+i+"-qtype").change(function() { 
-      showDistractors(group, $(this).val()); 
-    });
+    (function(group) {
+      $("#id_problems_set-"+i+"-qtype").change(function() {
+        showDistractors(group, $(this).val());
+      });
+    })(i);
   }
 
   // dynamically add more exercises
