--- a/server/static/html/map.html
+++ b/server/static/html/map.html
@@ -37,7 +37,7 @@
       oGlobals.studyActive = {{ study_active }};
       oGlobals.csrftoken = '{{ csrf_token }}';
     </script>
-  {% if 1 %}
+  {% if debug %}
   <script data-main="{% static "javascript/main.js" %}" type="text/javascript" src="{% static "javascript/lib/require-min.js" %}"></script>
   {% else %}
   <script  src="{% static "javascript/lib/require-min.js" %}"></script>
