use local jquery

--- a/server/static/html/octal.html
+++ b/server/static/html/octal.html
@@ -98,7 +98,7 @@
 
     {% compress js %}
         {% block jscript %}
-        <script src="//code.jquery.com/jquery-2.1.0.min.js"></script>
+        <script src="{% static "javascript/lib/jquery-2.1.0.min.js" %}"></script>
         {% endblock %}
 
         {% block jscript-extend %}{% endblock %}
