--- a/server/static/html/maps-form.html
+++ b/server/static/html/maps-form.html
@@ -191,7 +191,7 @@ you have recorded the above secret, or you will be unable to edit your Unit!</p>
 {% if forms.graph %}
 
 {% block jscript %}
-    {% if 1 %}
+    {% if debug %}
     <script data-main="{% static "javascript/main.js" %}" type="text/javascript" src="{% static "javascript/lib/require-min.js" %}"></script>
     {% else %}
     <script  src="{% static "javascript/lib/require-min.js" %}"></script>
