fix tinymce ref

--- a/server/static/html/exercises-form.html
+++ b/server/static/html/exercises-form.html
@@ -10,7 +10,7 @@
 {% endblock %}
 {% block jscript-extend %}
 <script type="text/javascript" src="{% static "javascript/lib/select2.min.js" %}"></script>
-<script type="text/javascript" src="{% static "javascript/lib/src="tinymce-4.0.min.js %}"></script>
+<script type="text/javascript" src="{% static "javascript/lib/tinymce-4.0.min.js" %}"></script>
 <script type="text/javascript">
 // <![CDATA[
 
